--- a/src/app/componentes/inicial/inicial.component.html
+++ b/src/app/componentes/inicial/inicial.component.html
@@ -1,103 +1,106 @@
 <div id="carouselBanner" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-        <button
+      <button
         type="button"
         data-bs-target="#carouselBanner"
         data-bs-slide-to="0"
         class="active"
         aria-current="true"
         aria-label="Slide 1"
-        ></button>
-        <button
+      ></button>
+      <button
         type="button"
         data-bs-target="#carouselBanner"
         data-bs-slide-to="1"
         aria-label="Slide 2"
-        ></button>
-        <button
+      ></button>
+      <button
         type="button"
         data-bs-target="#carouselBanner"
         data-bs-slide-to="2"
         aria-label="Slide 3"
-        ></button>
+      ></button>
     </div>
     <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="3000">
+      <div class="carousel-item active" data-bs-interval="3000">
         <img
-            src="assets/imagens/banner1.jpg"
-            height="600"
-            class="d-block w-100"
-            alt="Banner 1"
+          src="assets/imagens/banner1.jpg"
+          height="500"
+          class="d-block w-100"
+          alt="Banner 1"
         />
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
         <img
-            src="assets/imagens/banner2.jpg"
-            height="600"
-            class="d-block w-100"
-            alt="Banner 2"
+          src="assets/imagens/banner2.jpg"
+          height="500"
+          class="d-block w-100"
+          alt="Banner 2"
         />
-        </div>
-        <div class="carousel-item" data-bs-interval="3000">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
         <img
-            src="assets/imagens/banner3.jpg"
-            height="600"
-            class="d-block w-100"
-            alt="Banner 3"
+          src="assets/imagens/banner3.jpg"
+          height="500"
+          class="d-block w-100"
+          alt="Banner 3"
         />
-        </div>
+      </div>
     </div>
     <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselBanner"
-        data-bs-slide="prev"
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselBanner"
+      data-bs-slide="prev"
     >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Anterior</span>
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Anterior</span>
     </button>
     <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselBanner"
-        data-bs-slide="next"
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselBanner"
+      data-bs-slide="next"
     >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Próximo</span>
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Próximo</span>
     </button>
-    </div>
+  </div>
   
-<!-- Listagem de produtos -->
-<br />
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col" *ngFor="let produto of produtos">
-    <div class="card h-100">
-    <img 
-        src="assets/produtos/{{ produto.fotos[0] }}" 
-        class="card-img-top" 
-        alt="produto.nome"
-    />
-      <div class="card-body">
-        <p class="card-text" align="center">
+  <!-- Listagem de produtos -->
+  <br />
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col" *ngFor="let produto of produtos">
+      <div class="card h-100">
+        <img
+          src="assets/produtos/{{ produto.fotos[0] }}"
+          class="card-img-top"
+          [alt]="produto.nome"
+        />
+        <div class="card-body">
+          <p class="card-text">
             {{ produto.nome }}
-        </p>
-        <h5 class="text-center"><strong> {{ produto.preco | currency:'BRL' }} </strong></h5>
-        <p class="text-center">
-            <a  
-                class="btn btn-outline-success"
-                [routerLink]="['/produto/' + produto.id]"
+          </p>
+          <h5 class="text-center">
+            <strong>{{ produto.preco | currency: "BRL" }}</strong>
+          </h5>
+          <p class="text-center">
+            <a
+              class="btn btn-outline-success"
+              [routerLink]="['/produto/' + produto.id]"
             >
-                <i class="bi bi-plus-lg"></i> Detalhes
+              <i class="bi bi-plus-lg"></i> Detalhes
             </a>
             &nbsp;
-            <button 
-                type="button" 
-                class="btn btn-outline-primary"
+            <button
+              type="button"
+              class="btn btn-outline-primary"
+              (click)="adicionarCarrinho(produto)"
             >
-                <i class="bi bi-cart"></i> Carrinho
+              <i class="bi bi-cart"></i> Carrinho
             </button>
-        </p>
+          </p>
+        </div>
       </div>
     </div>
   </div>
-</div>
